# machine-learning

./: learning.cabal
src/: Attr.hs  DecisionTree.hs  Neural.hs  SList.hs
test/: Main.hs  Wdbc.hs
