name:         learning
version:      0.1.0.0
-- synopsis:
-- description:
license:      PublicDomain
license-file: LICENSE

author:       Jared Loomis
maintainer:   jaredloomis1@gmail.com

category:      Machine Learning
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:   
    DecisionTree, Neural, Attr
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    random,
    bytestring, text, vector,
    parsec,
    deepseq,
    zlib
  hs-source-dirs:   src
  default-language: Haskell2010

  ghc-options: -O2 -flate-dmd-anal -fexpose-all-unfoldings -optlo-O3 -optlc-O3

executable smalltest
  build-depends:
    base >=4.8 && <4.9,
    parsec,
    text,
    learning

  hs-source-dirs: test
  main-is:        Main.hs

executable wdbc
  build-depends:
    base >=4.8 && <4.9,
    parsec,
    text,
    learning

  hs-source-dirs: test
  main-is:        Wdbc.hs
